# NeuroR-D

./: LICENSE.txt  README.md  eggs_runner.py  poc_eggs.ipynb  pyproject.toml
src/config/: config_files.py
src/data/: __init__.py  dataloader.py  poc_datalodaer.ipynb
src/eggs/: __about__.py
src/models/: eggs_skeleton.py
src/trainers/: trainer_models.py
