[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eggs"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jessy Azizi", email = "jessyazizi08@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torchaudio==2.2.2",
  "torch",
  "numpy==2.2.1",
  "tqdm==4.67.1",
  "scipy==1.15.1",
  "pyEDFlib==0.1.38", # Pas utile en fonciton du dataset
  "mne==1.9.0",
  "pandas==2.2.3" 
]

[project.urls]
Documentation = "https://github.com/Jessy Azizi/eggs#readme"
Issues = "https://github.com/Jessy Azizi/eggs/issues"
Source = "https://github.com/Jessy Azizi/eggs"



# Lister les envs 


[tool.hatch.envs.default]
python = "3.12"



[tool.hatch.version]
path = "src/eggs/__about__.py"


# Extra ?
[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/eggs tests}"

[tool.coverage.run]
source_pkgs = ["eggs", "tests"]
branch = true
parallel = true
omit = [
  "src/eggs/__about__.py",
]

[tool.coverage.paths]
eggs = ["src/eggs", "*/eggs/src/eggs"]
tests = ["tests", "*/eggs/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
